Bug #18101 Out of stringbuffer while creating triggers lead to crash
Submitted: 9 Mar 2006 10:05 Modified: 14 Mar 2006 14:08
Reporter: Jonas Oreland Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:
Assigned to: Jonas Oreland Target Version:

[9 Mar 2006 10:05] Jonas Oreland
Description:
Set string buffer memory to a low value.
Create triggers (from sql by creating indexes)
If stringbuffer gets full, during create of a trigger, this failure is not handled.

How to repeat:
 

Suggested fix:
Return correct error code instead
[9 Mar 2006 10:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3620
[12 Mar 2006 12:48] Jonas Oreland
pushed into 5.1.8
[14 Mar 2006 14:08] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.1.8 changelog. Closed.