bug#18101 - ndb   handle out of string buffer when creating triggers